<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Michelangelo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_michelangelo_camera">Michelangelo</string>
    <string name="dummy_button">Capture Image</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_michelangelo_gallery">Gallery</string>
    <string name="title_activity_michelangelo_help">Help</string>
    <string name="title_activity_michelangelo_about">About</string>
    <string name="title_activity_michelangelo_modelviewer">Model Viewer</string>

    <string-array name="menu_options_camera">
        <item>Capture Settings</item>
        <item>Gallery</item>
        <item>Help</item>
        <item>About</item>
    </string-array>

    <string name="content_about_us">
        Senior Design Spring 2014: \n Neil Babaria \n 
        Tyler Cox \n
        Jordan Naumann \n 
        Arit Paul \n
        Vikram Sripadam \n
        Mentor: Al Bovik \n
        \n
        Samples at naumann.cloudapp.net</string>
    <string name="content_help">Take left image first, right image second. \n Accept or Reject the depthmap after processing. \n Check the gallery for opening models and sharing.</string>
    <string name="content_gallery">Welcome to the gallery!</string>
    <string name="action_open_drawer">Open the side menu</string>
    <string name="action_close_drawer">Close the side menu</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="action_ok">OK</string>
    <string name="action_cancel">Cancel</string>
    <string name="setting_num_images_desc">Number of images to use:</string>
    <string name="saved_setting_num_images">Saved number of images to use</string>
    <string name="title_dialog_capture_settings">Capture Settings</string>
    <string name="setting_num_images_min">6</string>
    <string name="setting_num_images_max">10</string>
    <string name="setting_num_images_default">8</string>
    <string name="action_delete">Delete</string>
    <string name="action_share">Share</string>
    <string name="gallery_item_desc">An image</string>

    <string-array name="menu_options_modelviewer">
        <item>Model Settings</item>
        <item>New Model</item>
        <item>Gallery</item>
        <item>Help</item>
        <item>About</item>
    </string-array>

    <string name="title_dialog_modelviewer_settings">Modelviewer Settings</string>
    <string name="setting_modelviewer_desc">Change the modelviewer settings</string>
    <string name="title_dialog_confirm_delete">Confirm Delete</string>
    <string name="confirm_delete_selected">Delete all of the selected models?</string>
    <string name="confirm_delete_model">Delete this model?</string>
    <string name="title_activity_michelangelo_ui">MichelangeloUI</string>
    <string name="sensor_output">roll: , pitch: , yaw: </string>    
    <string name="hello">Please load the STL file from the file chooser(menu key, or tap the screen).</string>
    <string name="error_fetch_data">Failed to read the STL file.</string>
    <string name="stl_load_progress_title">STL file loading...</string>
    <string name="stl_load_progress_message">Please wait a moment.</string>
    <!-- dialog -->
    <string name="menu_open">Select STL file...</string>
    <string name="parent_directory">Parent directory</string>
    <string name="close_dialog">Close dialog</string>
    <!-- toggle button -->
    <string name="toggleButtonMove">Move</string>
    <string name="toggleButtonRotate">Rotate</string>
    
        <!-- preferences -->
    <string name="app_pref">STLViewer Preferences</string>
    <string name="red">Red</string>
    <string name="green">Green</string>
    <string name="blue">Blue</string>
    <string name="alpha">Alpha</string>
    <string name="objectColor">Object color:</string>
    <string name="displayAxis">Display axes and grids:</string>
    <string name="grids">Grids:</string>
    <string name="axes">Axes:</string>
    <string name="resetToDefault">Reset to default value.</string>
    <string name="closePreferences">Save &amp; close</string>
    <string name="roll_label">Roll</string>
    <string name="pitch_label">Pitch</string>
    <string name="yaw_label">Yaw</string>
    
    <string name="Accept">Accept</string>
    <string name="Reject">Reject</string>

</resources>
