<!-- The main content view -->
<FrameLayout 
	xmlns:android="http://schemas.android.com/apk/res/android"	
    xmlns:custom="http://schemas.android.com/apk/res/com.michelangelo"
	xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context=".MichelangeloCamera"
    android:id="@+id/camera_window" >

    <!--
         This FrameLayout insets its children based on system windows using
         android:fitsSystemWindows.
    -->    
	
	<ImageView
	    android:id="@+id/last_image"
	    android:layout_width="match_parent"
	    android:layout_height="match_parent"
	    android:alpha=".45" />

    <RelativeLayout
        android:id="@+id/overlay"
        style="@style/TransparentStyle"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="?android:attr/actionBarSize"
        android:paddingTop="15dp" >

        <com.michelangelo.CircleView
            android:id="@+id/circle"
        	style="@style/OverlayStyle"
            android:layout_width="40dp"
            android:layout_height="40dp"/>
        <com.michelangelo.AngledLineView
            android:id="@+id/circleLine"
	        android:layout_width="0dp"
	        android:layout_height="0dp"
            android:layout_alignLeft="@id/circle"
            android:layout_alignRight="@id/circle"
            android:layout_alignTop="@id/circle"
            android:layout_alignBottom="@id/circle"/>"
    	<TextView
	        android:id="@+id/yaw"
        	style="@style/OverlayStyle"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@id/circle"
	        android:layout_alignLeft="@id/circle"
	        android:layout_alignRight="@id/circle"
	        android:gravity="center_horizontal"
	        android:textSize="16sp"
	        android:text="@string/yaw_label"/>   
	        
    	
        <com.michelangelo.CenteredAngledLineView
            android:id="@+id/pitchLine"
        	style="@style/OverlayStyle"
	        android:layout_centerHorizontal="true"
	        android:layout_width="40dp"
	        android:layout_height="40dp"/>	
    	<TextView
	        android:id="@+id/pitch"
        	style="@style/OverlayStyle"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_alignLeft="@id/pitchLine"
	        android:layout_alignRight="@id/pitchLine"
	        android:layout_below="@id/pitchLine"
	        android:textSize="16sp"
	        android:text="@string/pitch_label"/>
    	
        <com.michelangelo.CenteredAngledLineView
            android:id="@+id/horizonLine"
        	style="@style/OverlayStyle"
			android:layout_alignParentRight="true"
	        android:layout_width="40dp"
	        android:layout_height="40dp"/>	    	
    	<TextView
	        android:id="@+id/roll"
        	style="@style/OverlayStyle"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
			android:layout_alignLeft="@id/horizonLine"
			android:layout_alignParentRight="true"
	        android:layout_below="@id/horizonLine"
	        android:gravity="center"
	        android:textSize="16sp"
	        android:text="@string/roll_label"/>
        
        <Button
            android:id="@+id/button_capture"
            style="?buttonBarButtonStyle"
            android:layout_alignParentBottom="true"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/burnt_orange"
            android:text="@string/dummy_button"
            android:visibility="visible"   
            android:layout_gravity="bottom|center_horizontal"
            android:orientation="horizontal" />
        
        <com.michelangelo.RectangleView
            android:id="@+id/guideBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            android:layout_below="@id/yaw"
            android:layout_above="@id/button_capture"/>

    </RelativeLayout>
    
</FrameLayout>